refactoring: code refactoring